# JobSync

./: .env.example  .gitignore  LICENSE  README.md  SETUP_ENV.md  pyproject.toml  requirements.txt
.github/workflows/: daily-sync-branches.yml  daily-sync.yml  test-llm-mcp.yml  weekly-report.yml
agent/: cache.json  cache_utils.py  gmail_client.py  gmail_connector.py  llm_utils.py  main.py  notion_utils.py  weekly_report.py
gmail_mcp/: gmail_client.py
mcp_servers/: __init__.py  gmail_server.py  notion_server.py  weekly_report_server.py
shared/: __init__.py  config.py  entry_points.py  models.py  utils.py
workflows/: __init__.py  job_sync_workflow.py  weekly_report_workflow.py
